Remove old, unused icons. lol.

--- a/index.html
+++ b/index.html
@@ -1,52 +1,88 @@
 <!DOCTYPE html>
-<html lang="en">
-  <head>
+<html lang="en"><head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta http-equiv="Author" content="&copy;2016 Philip Broadway" />
-    <meta name="description" content="Listabot - App landing page">
-    <link rel="apple-touch-icon" sizes="57x57" href="/apple-icon-57x57.png?v1">
-    <link rel="apple-touch-icon" sizes="60x60" href="/apple-icon-60x60.png?v1">
-    <link rel="apple-touch-icon" sizes="72x72" href="/apple-icon-72x72.png?v1">
-    <link rel="apple-touch-icon" sizes="76x76" href="/apple-icon-76x76.png?v1">
-    <link rel="apple-touch-icon" sizes="114x114" href="/apple-icon-114x114.png?v1">
-    <link rel="apple-touch-icon" sizes="120x120" href="/apple-icon-120x120.png?v1">
-    <link rel="apple-touch-icon" sizes="144x144" href="/apple-icon-144x144.png?v1">
-    <link rel="apple-touch-icon" sizes="152x152" href="/apple-icon-152x152.png?v1">
-    <link rel="apple-touch-icon" sizes="180x180" href="/apple-icon-180x180.png?v1">
-    <link rel="icon" type="image/png" sizes="192x192"  href="/android-icon-192x192.png?v1">
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png?v1">
-    <link rel="icon" type="image/png" sizes="96x96" href="/favicon-96x96.png?v1">
-    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png?v1">
-    <link rel="manifest" href="/manifest.json?v1">
+    <meta http-equiv="Author" content="©2016 Philip Broadway">
+    <meta name="description" content="Listabot">
+    <link rel="apple-touch-icon" sizes="57x57" href="/apple-icon-57x57.png">
+    <link rel="apple-touch-icon" sizes="60x60" href="/apple-icon-60x60.png">
+    <link rel="apple-touch-icon" sizes="72x72" href="/apple-icon-72x72.png">
+    <link rel="apple-touch-icon" sizes="76x76" href="/apple-icon-76x76.png">
+    <link rel="apple-touch-icon" sizes="114x114" href="/apple-icon-114x114.png">
+    <link rel="apple-touch-icon" sizes="120x120" href="/apple-icon-120x120.png">
+    <link rel="apple-touch-icon" sizes="144x144" href="/apple-icon-144x144.png">
+    <link rel="apple-touch-icon" sizes="152x152" href="/apple-icon-152x152.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-icon-180x180.png">
+    <link rel="icon" type="image/png" sizes="192x192"  href="/android-icon-192x192.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="/favicon-96x96.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="manifest" href="/manifest.json">
     <meta name="msapplication-TileColor" content="#ffffff">
-    <meta name="msapplication-TileImage" content="/ms-icon-144x144.png?v1">
+    <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
     <meta name="theme-color" content="#ffffff">
+    <meta name="msapplication-TileColor" content="#eeeeee">
+    <meta name="msapplication-TileImage" content="/ms-icon-144x144.png?v2">
+    <meta name="theme-color" content="#eeeeee">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <title>Listabot</title>
-
   </head>
-  <body id="listabot.com" itemscope itemtype="http://schema.org/MobileApplication" style="background-color:#a9a9a9;font-size: 16px!;">
-    <svg viewBox="0 0 840 840" style="position:fixed; width:100%; height:100%; display:block; margin:0;background-color:#a9a9a9;">
-      <path style="fill:#211B52;" d="M407.203,25.629L28.973,302.251l377.406,297.295L786.842,299.97L407.203,25.629z M411.003,595.437 l-2.833-104.333L157.707,300.438L407.26,124.254L658.27,299.876L516.545,407.529"/>
-      <polyline style="fill:#ca2129;" points="26.386,511.873 405.88,807.885 788.2,499.957 406.401,238.139 406.386,333.061 660.628,507.873 406.08,698.85 154.446,511.873 299.745,409.201 235.433,360.701 "/>
-      <polygon style="fill:#808080;" points="235.401,360.686 299.745,409.201 406.401,333.061 406.398,238.131 "/>
-      <polygon style="fill:#808080;" points="587.671,457.545 515.667,407.943 406.245,489.654 406.386,599.557 "/>
-      <polygon style="fill:#2e0a19;" points="581.448,358.186 515.495,408.076 587.589,457.623 652.058,406.592 "/>
-      <polygon style="fill:#2e0a19;" points="166.198,410.764 228.511,459.545 300.1,409.006 235.604,360.545 "/>
-	  </svg>
-    <span itemprop="creator" style="font-color:#a9a9a9;">
-      <span id="philipbroadway" itemscope itemtype="http://schema.org/Person" style="font-color:#a9a9a9;">http://philipbroadway.com</span>
+  <body id="listabot.com" itemscope="" itemtype="http://schema.org/MobileApplication" style="background-color:#eeeeee;font-size: 16px!;color:#a9a9a9;">
+     <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" id="Listabot" x="0" y="0" width="1000" height="1000" viewBox="0 0 1000 1000" xml:space="preserve" enable-background="new 0 0 1000 1000" style="position:fixed; width:100%; height:100%; display:block; margin:0;background-color:#eeeeee;">
+       <rect x="0" y="0" style="display:none;fill:transparent;" width="1000" height="1000"/>
+       <g id="logo">
+       	<g id="logo_2_">
+       		<polygon id="top-left_1_" style="fill:#232630;" points="499.623,127.321 499.623,221.096 276.92,382.535 499.712,559.576 
+       			499.645,678.779 134.766,387.863 		"/>
+       		<polygon id="left-stem_1_" style="fill:#188095;" points="499.553,321.775 499.669,419.316 407.163,486.056 340.281,432.891 		"/>
+       		<polygon id="bottom-left_1_" style="fill:#188095;" points="264.911,491.488 132.833,584.817 499.666,872.679 499.545,759.836 
+       			267,590 331.906,545.047 		"/>
+       		<polygon id="top-right_1_" style="fill:#232630;" points="499.623,127.368 499.623,221.096 739.921,377.437 600.402,484.456 
+       			676.709,534.274 866.975,378.21 		"/>
+       		<polygon id="right-stem_1_" style="fill:#232630;" points="499.712,559.826 499.645,678.779 676.599,534.274 600.29,484.567 		"/>
+       		<polygon id="bottomRight_1_" style="fill:#188095;" points="867.167,573.039 499.645,872.656 499.645,759.936 740.242,576.173 
+       			499.669,419.316 499.576,321.775 		"/>
+       	</g>
+       	<polygon style="fill:#232630;" points="499.521,127.591 499.623,127.368 447.335,194.48 499.809,221.583 499.623,221.096 
+       		551.129,190.444 	"/>
+       	<polygon style="fill:#232630;" points="492.472,553.844 499.819,559.721 510.855,551.725 513.396,667.607 499.671,678.733 
+       		486.582,668.179 	"/>
+       	<polygon style="fill:#188095;" points="491.584,754.696 500,760.012 511.074,751.596 514.396,860.118 499.645,872.656 
+       		486.49,862.111 	"/>
+       	<polygon style="fill:#188095;" points="494.02,325.921 499.576,321.775 504.651,325.699 504.43,421.376 499.669,419.316 
+       		495.127,420.934 	"/>
+       </g>
+       <g id="overlay">
+       	<radialGradient id="SVGID_1_" cx="508.1289" cy="394.5" r="284.5533" gradientUnits="userSpaceOnUse">
+       		<stop  offset="0.5744" style="stop-color:#130C0E;stop-opacity:0"/>
+       		<stop  offset="0.7977" style="stop-color:#130C0E;stop-opacity:0.6512"/>
+       		<stop  offset="1" style="stop-color:#130C0E;stop-opacity:0.95"/>
+       	</radialGradient>
+       	<polygon style="fill:url(#SVGID_1_);" points="500,156 184,382 494,633 651,518 621,499 497,591 233,381 499,189 787,377 
+       		686.79,449.74 716.75,470.234 832.257,379.07 	"/>
+       	<radialGradient id="SVGID_2_" cx="509" cy="607.5" r="288.2891" gradientUnits="userSpaceOnUse">
+       		<stop  offset="0.5744" style="stop-color:#130C0E;stop-opacity:0"/>
+       		<stop  offset="0.7977" style="stop-color:#130C0E;stop-opacity:0.6512"/>
+       		<stop  offset="1" style="stop-color:#130C0E;stop-opacity:0.95"/>
+       	</radialGradient>
+       	<polygon style="fill:url(#SVGID_2_);" points="387.297,470.281 359.328,448.047 498,352 832,575 501,839 178,583 287.469,509.531 
+       		312,529 231,581 502,799 789,574 502,389 	"/>
+       </g>
+       </svg>
+    <span itemprop="creator">
+      <span id="philipbroadway" itemscope="" itemtype="http://schema.org/Person" style="font-color:#a9a9a9;">http://philipbroadway.com</span>
     </span>
-    <span itemprop="operatingSystem" style="font-color:#a9a9a9;">ios</span>
-    <span itemprop="applicationCategory" style="font-color:#a9a9a9;">https://en.wikipedia.org/wiki/Productivity</span>
-    <script>
-      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-        (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-        m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-      })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-      ga('create', 'UA-83424741-1', 'auto');
-      ga('send', 'pageview');
-      </script>
-  </body>
+    <span itemprop="operatingSystem">ios</span>
+    <span itemprop="applicationCategory">https://en.wikipedia.org/wiki/Productivity</span>
+  <script>
+    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+    })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+    ga('create', 'UA-83424741-1', 'auto');
+    ga('send', 'pageview');
+
+  </script>
+</body>
 </html>
