always misspelling analyze :-|

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
     </div>
     <div class="container">
       <div class="row text-center">
-        <img class="" src="verticle-phone.png">
+        <img class="img-responsive" src="verticle-phone.png">
       </div>
     </div>
     <div class="container">
@@ -91,7 +91,7 @@
            <ul class="text-center">
              <li>Multiple Projects</li>
              <li>Multiple Concurrent Tasks</li>
-             <li>Analyize Performance &amp; Billable Hours In Real-Time</li>
+             <li>Analyze Performance &amp; Billable Hours In Real-Time</li>
              <li>Email CVS or HTML Reports</li>
            </ul>
       </div>
