--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
     </div>
     <div class="container">
       <div class="row text-center">
-        <img class="img-responsive" src="verticle-phone.png">
+        <img class="hero-phone img-responsive" src="verticle-phone.png">
       </div>
     </div>
     <div class="container">
