--- a/index.html
+++ b/index.html
@@ -98,12 +98,12 @@
     </div>
     <div class="container">
       <div class="row features">
-        <h3 class="text-center ">Pricing</h3>
+        <!-- <h3 class="text-center ">Pricing</h3>
         <table class="table text-center ">
            <tr>
              <td>$2.99 One-time w/ Free Updates</td>
             </tr>
-        </table>
+        </table> -->
       </div>
       <div class="text-center">
         <p class="badge"><img src="appstoreBadge.svg"></p>
