--- a/index.html
+++ b/index.html
@@ -40,6 +40,24 @@
   </head>
 
   <body>
+    <script>
+      window.fbAsyncInit = function() {
+        FB.init({
+          appId      : '1250439265030926',
+          xfbml      : true,
+          version    : 'v2.8'
+        });
+        FB.AppEvents.logPageView();
+      };
+
+      (function(d, s, id){
+         var js, fjs = d.getElementsByTagName(s)[0];
+         if (d.getElementById(id)) {return;}
+         js = d.createElement(s); js.id = id;
+         js.src = "//connect.facebook.net/en_US/sdk.js";
+         fjs.parentNode.insertBefore(js, fjs);
+       }(document, 'script', 'facebook-jssdk'));
+    </script>
      <nav class="navbar listabot-primary navbar-default navbar-fixed-top">
        <div class="container">
          <div class="navbar-header">
@@ -107,6 +125,12 @@
       </div>
       <div class="text-center">
         <p class="badge"><img src="appstoreBadge.svg"></p>
+      </div>
+      <div
+        class="fb-like"
+        data-share="true"
+        data-width="450"
+        data-show-faces="true">
       </div>
     </div>
     <footer class="footer">
