--- a/index.html
+++ b/index.html
@@ -28,8 +28,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-
-    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
@@ -72,7 +71,7 @@
          <div id="navbar" class="collapse navbar-collapse">
            <ul class="nav navbar-nav">
              <li class="active"><a href="#">Home</a></li>
-             <li><a href="mailto:yo@listabot.com">Support</a></li>
+             <li><a href="mailto:yo@listabot.com">Contact</a></li>
              </li>
            </ul>
          </div>
@@ -116,18 +115,21 @@
     </div>
     <div class="container">
       <div class="row features">
-        <!-- <h3 class="text-center ">Pricing</h3>
-        <table class="table text-center ">
+        <h3 class="text-center ">Pricing</h3>
+        <table class="table text-center pricing">
+          <tr>
+            <td><s>$5.99  w/ Lifetime Free Updates</s></td>
+          </tr>
            <tr>
-             <td>$2.99 One-time w/ Free Updates</td>
+             <td><span class="special">Launch Special</span> $2.99 Lifetime w/ Free Updates</td>
             </tr>
-        </table> -->
+        </table>
       </div>
       <div class="text-center">
         <p class="badge"><img src="appstoreBadge.svg"></p>
       </div>
       <div
-        class="fb-like"
+        class="fb-like text-center img-circle"
         data-share="true"
         data-width="450"
         data-show-faces="true">
@@ -138,6 +140,5 @@
         <a href="http://philipbroadway.com"><p class="text-muted">&copy; Philip Broadway 2017</p></a>
       </div>
     </footer>
-    <script src="../../assets/js/ie10-viewport-bug-workaround.js"></script>
   </body>
 </html>
