Add additional screen

--- a/index.html
+++ b/index.html
@@ -48,7 +48,6 @@
         });
         FB.AppEvents.logPageView();
       };
-
       (function(d, s, id){
          var js, fjs = d.getElementsByTagName(s)[0];
          if (d.getElementById(id)) {return;}
@@ -95,16 +94,16 @@
         <h2>Start Working.</h2>
       </div>
     </div>
+    <h3 class="text-center ">Features</h3>
     <div class="container">
       <div class="row text-center">
-        <img height="574" src="1242x2208-tasks.png">
-        <img height="574" src="1242x2208-timeline.png">
+        <img class="img" height="574" src="1242x2208-timeline.png">
+        <img class="img" height="574" src="1242x2208-tasks.png">
+        <img class="img" height="574" src="1242x2208-analytics.png">
       </div>
     </div>
     <div class="container">
       <div class="row features">
-        
-        <h3 class="text-center ">Features</h3>
            <ul class="text-center">
              <li>Multiple Projects</li>
              <li>Multiple Concurrent Tasks</li>
@@ -118,10 +117,13 @@
         <h3 class="text-center ">Pricing</h3>
         <table class="table text-center pricing">
           <tr>
-            <td><s>$5.99  w/ Lifetime Free Updates</s></td>
+            <td><s>$5.99  w/ Free Updates</s></td>
+          </tr>
+          <tr>
+            <td><span class="special">Launch Special</span></td>
           </tr>
            <tr>
-             <td><span class="special">Launch Special</span> $2.99 Lifetime w/ Free Updates</td>
+             <td> $2.99 w/ Free Updates</td>
             </tr>
         </table>
       </div>
