--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
       </div>
     </div>
     <div class="container">
-      <div class="row features">
+      <div class="row pricing">
         <h3 class="text-center ">Pricing</h3>
         <table class="table text-center pricing">
           <tr>
