--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
      </nav>
 
     <div class="container">
-      <div class="page-header">
+      <div class="page-header display-1">
         <h1>Simplify Tracking Your Time</h1>
       </div>
     </div>
@@ -94,7 +94,7 @@
         <h2>Start Working.</h2>
       </div>
     </div>
-    <h3 class="text-center ">Features</h3>
+    <h3 class="text-center display-2">Features</h3>
     <div class="container">
       <div class="row text-center">
         <img class="img" height="574" src="1242x2208-timeline.png">
@@ -114,7 +114,7 @@
     </div>
     <div class="container">
       <div class="row pricing">
-        <h3 class="text-center ">Pricing</h3>
+        <h3 class="text-center display-2">Pricing</h3>
         <table class="table text-center pricing">
           <tr>
             <td><s>$5.99  w/ Free Updates</s></td>
@@ -127,8 +127,12 @@
             </tr>
         </table>
       </div>
-      <div class="text-center">
-        <p class="badge"><img src="appstoreBadge.svg"></p>
+      
+      <div class="container ">
+        <div class="row text-center">
+          <h3>Store</h3>
+          <p ><img src="appstoreBadge.svg"></p>
+        </div>
       </div>
       <div
         class="fb-like text-center img-circle"
