--- a/index.html
+++ b/index.html
@@ -103,8 +103,8 @@
       </div>
     </div>
     <div class="container">
-      <div class="row features">
-           <ul class="text-center">
+      <div class="row features text-center">
+           <ul>
              <li>Multiple Projects</li>
              <li>Multiple Concurrent Tasks</li>
              <li>Analyze Performance &amp; Billable Hours In Real-Time</li>
@@ -112,10 +112,11 @@
            </ul>
       </div>
     </div>
+    <h3 class="display-2 text-center">Pricing</h3>
     <div class="container">
-      <div class="row pricing">
-        <h3 class="text-center display-2">Pricing</h3>
-        <table class="table text-center pricing">
+      <div class="row pricing text-center">
+        
+        <table class="table pricing">
           <tr>
             <td><s>$5.99  w/ Free Updates</s></td>
           </tr>
@@ -127,15 +128,14 @@
             </tr>
         </table>
       </div>
-      
-      <div class="container ">
-        <div class="row text-center">
-          <h3>Store</h3>
-          <p ><img src="appstoreBadge.svg"></p>
+      <h3 class="display-2 text-center">Store</h3>
+      <div class="container">
+        <div class="row">
+          <img class="img-responsive appstore-badge" src="appstoreBadge.svg">
         </div>
       </div>
       <div
-        class="fb-like text-center img-circle"
+        class="fb-like text-center"
         data-share="true"
         data-width="450"
         data-show-faces="true">
