updated Store Text

--- a/index.html
+++ b/index.html
@@ -131,6 +131,7 @@
       <h3 class="display-2 text-center">Store</h3>
       <div class="container">
         <div class="row">
+          <h4 class="text-center display-3">Designed For iPhone &amp; iPad<h4>
           <img class="img-responsive appstore-badge" src="appstoreBadge.svg">
         </div>
       </div>
