fb-like positioning

--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
         </div>
       </div>
       <div
-        class="fb-like text-center"
+        class="fb-like pull-right"
         data-share="true"
         data-width="450"
         data-show-faces="true">
