--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
     </div>
     <footer class="footer">
       <div class="container">
-        <a href="http://philipbroadway.com"><p class="text-muted">&copy; Philip Broadway 2017</p></a>
+        <a href="http://philipbroadway.com"><p class="text-muted">&copy; Philip Broadway 2017 &nbsp;&nbsp;All Rights reserved</p></a>
       </div>
     </footer>
   </body>
