--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
     <meta name="theme-color" content="#ffffff">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>Listabot</title>
+    <title>Listabot - Time Tracking &amp; Reporting App</title>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
