--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
       <div class="container">
         <div class="row">
           <h4 class="text-center display-3">Designed For iPhone &amp; iPad<h4>
-          <img class="img-responsive appstore-badge" src="appstoreBadge.svg">
+          <a href="http://appstore.com/listabot"><img class="img-responsive appstore-badge" src="appstoreBadge.svg"></a>
         </div>
       </div>
       <div
