--- a/index.html
+++ b/index.html
@@ -31,12 +31,18 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="animate.min.css">
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
     <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
-      <!-- Google Analytics -->
+    
+    <script type="text/javascript" src="wow.js"></script>
+    <script type="text/javascript">
+      var wow = new WOW().init()
+    </script>
+    <!-- Google Analytics -->
       <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
       (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -89,13 +95,13 @@
      </nav>
 
     <div class="container">
-      <div class="page-header display-1">
+      <div class="page-header display-1 wow fadeInLeft">
         <h1>Simplify Tracking Your Time</h1>
       </div>
     </div>
     <div class="container">
       <div class="row text-center">
-        <img class="hero-phone img-responsive" src="verticle-phone.png">
+        <img class="hero-phone img-responsive wow fadeInRight" src="verticle-phone.png">
       </div>
     </div>
     <div class="container">
@@ -108,9 +114,9 @@
     <h3 class="text-center display-2">Features</h3>
     <div class="container">
       <div class="row text-center">
-        <img class="img" height="574" src="1242x2208-timeline.png">
-        <img class="img" height="574" src="1242x2208-tasks.png">
-        <img class="img" height="574" src="1242x2208-analytics.png">
+        <img class="img wow fadeIn" height="574" src="1242x2208-timeline.png">
+        <img class="img wow fadeIn" height="574" src="1242x2208-tasks.png">
+        <img class="img wow fadeIn" height="574" src="1242x2208-analytics.png">
       </div>
     </div>
     <div class="container">
