--- a/index.html
+++ b/index.html
@@ -154,10 +154,10 @@
             <td><span class="special">Launch Special</span></td>
           </tr>
           <tr>
-            <td><s>$5.99  w/ Free Updates</s></td>
+            <td><s>$5.99  *Free Updates</s></td>
           </tr>
            <tr>
-             <td> $2.99 w/ Free Updates</td>
+             <td> $1.99 *Free Updates</td>
             </tr>
         </table>
       </div>
