--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
         <h2>Add A Task.</h2>
         <h2>Start Working.</h2>
         <div class="row ">
-          <a href="https://itunes.apple.com/us/app/listabot/id1212689677?mt=8" style="appstore-badge display:inline-block;overflow:hidden;background:url(//linkmaker.itunes.apple.com/assets/shared/badges/en-us/appstore-lrg.svg) no-repeat;width:135px;height:40px;background-size:contain;"></a>
+          <a href="http://itunes.apple.com/us/app/listabot/id1212689677?mt=8" style="appstore-badge display:inline-block;overflow:hidden;background:url(//linkmaker.itunes.apple.com/assets/shared/badges/en-us/appstore-lrg.svg) no-repeat;width:135px;height:40px;background-size:contain;"></a>
         </div>
       </div>
     </div>
@@ -164,7 +164,7 @@
       <div class="container supports">
         <div class="row">
           <h4 class="text-center display-3">Designed For iPhone &amp; iPad<h4>
-          <a href="https://itunes.apple.com/us/app/listabot/id1212689677?mt=8" style="appstore-badge display:inline-block;overflow:hidden;background:url(//linkmaker.itunes.apple.com/assets/shared/badges/en-us/appstore-lrg.svg) no-repeat;width:135px;height:40px;background-size:contain;"></a>
+          <a href="http://itunes.apple.com/us/app/listabot/id1212689677?mt=8" style="appstore-badge display:inline-block;overflow:hidden;background:url(//linkmaker.itunes.apple.com/assets/shared/badges/en-us/appstore-lrg.svg) no-repeat;width:135px;height:40px;background-size:contain;"></a>
         </div>
       </div>
       
