--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
              <li class="active"><a href="#home">Home</a></li>
              <li><a href="#features">Features</a></li>
               <li><a href="#store">Pricing</a></li>
-             <li><a href="mailto:yo@listabot.com">Contact</a></li>
+             <li><a href="mailto:me@philipbroadway.com">Contact</a></li>
            </ul>
          </div>
        </div>
@@ -146,28 +146,24 @@
            </ul>
       </div>
     </div>
-      
       <h3 id="store" class="display-2 text-center">Pricing</h3>
       <div class="row pricing text-center">
         <table class="table pricing">
           <tr>
             <td><span class="special">Launch Special</span></td>
           </tr>
-          <tr>
-            <td><s>$5.99  *Free Updates</s></td>
-          </tr>
            <tr>
-             <td> $1.99 *Free Updates</td>
+             <td>$1.99 *Free Updates</td>
             </tr>
         </table>
       </div>
       <div class="container supports">
         <div class="row">
-          <h4 class="text-center display-3">Designed For iPhone &amp; iPad<h4>
+          <h4 class="text-center display-3">Designed Exclusively For iPhone &amp; iPad<h4>
           <a href="http://itunes.apple.com/us/app/listabot/id1212689677?mt=8"><img class="img-responsive appstore-badge" src="appstoreBadge.svg"></a>
         </div>
       </div>
-      
+      <script type="text/javascript" src="//s3.amazonaws.com/downloads.mailchimp.com/js/signup-forms/popup/embed.js" data-dojo-config="usePlainJson: true, isDebug: false"></script><script type="text/javascript">require(["mojo/signup-forms/Loader"], function(L) { L.start({"baseUrl":"mc.us15.list-manage.com","uuid":"52f6e2ed5d8513bfa0ec29969","lid":"e3af90d1a1"}) })</script>
       <div class="social"><a href="http://facebook.com/listabot"><img class="fb" src="FB-fLogo-Blue-broadcast.png"></a><a href="http://twitter.com/listabot"><img class="twitter" src="Twitter_Logo_Blue.png"></a></div>
       <!-- <div
         class="fb-like"
