--- a/index.html
+++ b/index.html
@@ -171,6 +171,7 @@
         data-width="450"
         data-show-faces="true">
       </div> -->
+    <script type="text/javascript" src="//s3.amazonaws.com/downloads.mailchimp.com/js/signup-forms/popup/embed.js" data-dojo-config="usePlainJson: true, isDebug: false"></script><script type="text/javascript">require(["mojo/signup-forms/Loader"], function(L) { L.start({"baseUrl":"mc.us15.list-manage.com","uuid":"52f6e2ed5d8513bfa0ec29969","lid":"e3af90d1a1"}) })</script>
     <footer class="footer">
       <div class="container">
         
