--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
       ga('send', 'pageview');
       </script>
       <!-- End Google Analytics -->
+      <script type="text/javascript" src="//s3.amazonaws.com/downloads.mailchimp.com/js/signup-forms/popup/embed.js" data-dojo-config="usePlainJson: true, isDebug: false"></script><script type="text/javascript">require(["mojo/signup-forms/Loader"], function(L) { L.start({"baseUrl":"mc.us15.list-manage.com","uuid":"52f6e2ed5d8513bfa0ec29969","lid":"e3af90d1a1"}) })</script>
   </head>
 
   <body data-spy="scroll" data-target=".navbar" data-offset="50">
@@ -110,7 +111,7 @@
      </nav>
     <div id="home" class="container">
       <div class="page-header display-1">
-        <h1>Simplify Tracking Your Time</h1>
+        <h1>Wasting Time Tracking Billable Hours?</h1>
       </div>
     </div>
     <div class="container">
@@ -120,9 +121,9 @@
     </div>
     <div class="container">
       <div class="in-eight-words row text-center">
-        <h2>Name The Project.</h2> 
+        <h2>Name Your Project.</h2> 
         <h2>Add A Task.</h2>
-        <h2>Start Working.</h2>
+        <h2>Get Back To Work.</h2>
         <div class="row ">
           <a href="http://itunes.apple.com/us/app/listabot/id1212689677?mt=8"><img class="img-responsive appstore-badge" src="appstoreBadge.svg"></a>
         </div>
@@ -153,7 +154,7 @@
             <td><span class="special">Launch Special</span></td>
           </tr>
            <tr>
-             <td>$1.99 *Free Updates</td>
+             <td>$1.99 One Time. No Subscription.</td>
             </tr>
         </table>
       </div>
@@ -163,7 +164,6 @@
           <a href="http://itunes.apple.com/us/app/listabot/id1212689677?mt=8"><img class="img-responsive appstore-badge" src="appstoreBadge.svg"></a>
         </div>
       </div>
-      <script type="text/javascript" src="//s3.amazonaws.com/downloads.mailchimp.com/js/signup-forms/popup/embed.js" data-dojo-config="usePlainJson: true, isDebug: false"></script><script type="text/javascript">require(["mojo/signup-forms/Loader"], function(L) { L.start({"baseUrl":"mc.us15.list-manage.com","uuid":"52f6e2ed5d8513bfa0ec29969","lid":"e3af90d1a1"}) })</script>
       <div class="social"><a href="http://facebook.com/listabot"><img class="fb" src="FB-fLogo-Blue-broadcast.png"></a><a href="http://twitter.com/listabot"><img class="twitter" src="Twitter_Logo_Blue.png"></a></div>
       <!-- <div
         class="fb-like"
