--- a/index.html
+++ b/index.html
@@ -121,6 +121,7 @@
     </div>
     <div class="container">
       <div class="in-eight-words row text-center">
+        <h1>Simplify.</h1>
         <h2>Name Your Project.</h2> 
         <h2>Add A Task.</h2>
         <h2>Get Back To Work.</h2>
