--- a/index.html
+++ b/index.html
@@ -133,9 +133,9 @@
     <h3 id="features" class="text-center display-2"><a name="features">Features</a></h3>
     <div class="container">
       <div class="row text-center">
-        <img class="img wow fadeIn" height="574" src="1242x2208-timeline.png">
-        <img class="img wow fadeIn" height="574" src="1242x2208-tasks.png">
-        <img class="img wow fadeIn" height="574" src="1242x2208-analytics.png">
+        <img class="img" height="574" src="1242x2208-tasks.png">
+        <img class="img" height="574" src="1242x2208-timeline.png">
+        <img class="img" height="574" src="1242x2208-analytics.png">
       </div>
     </div>
     <div class="container">
