removed redundant text...and added the 'alt' text.

--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
     </div>
     <div class="container">
       <div class="row text-center">
-        <img class="hero-phone img-responsive" src="verticle-phone.png">
+        <img class="hero-phone img-responsive" src="verticle-phone.png" alt="Screenshots of the Project Browser &amp; Analytics browser in Listabot">
       </div>
     </div>
     <div class="container">
@@ -133,20 +133,11 @@
     <h3 id="features" class="text-center display-2"><a name="features">Features</a></h3>
     <div class="container">
       <div class="row text-center">
-        <img class="img" height="574" src="1242x2208-tasks.png">
-        <img class="img" height="574" src="1242x2208-timeline.png">
-        <img class="img" height="574" src="1242x2208-analytics.png">
+        <img class="img" height="574" src="1242x2208-tasks.png" alt="Create multiple active projects with different hourly rates">
+        <img class="img" height="574" src="1242x2208-timeline.png" alt="You choose the billable hours to export in reports. Currently support CVS &amp; HTML">
+        <img class="img" height="574" src="1242x2208-analytics.png" alt="Compare time utilization per task in each project or in all your projects and estimate with confidence.">
       </div>
     </div>
-    <div class="container">
-      <div class="row features text-center">
-           <ul>
-             <li>Multiple Projects</li>
-             <li>Multiple Concurrent Tasks</li>
-             <li>Analyze Performance &amp; Billable Hours In Real-Time</li>
-             <li>Email CVS or HTML Reports</li>
-           </ul>
-      </div>
     </div>
       <h3 id="store" class="display-2 text-center">Pricing</h3>
       <div class="row pricing text-center">
