--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
              <li class="active"><a href="#home">Home</a></li>
              <li><a href="#features">Features</a></li>
               <li><a href="#store">Pricing</a></li>
-             <li><a href="mailto:me@philipbroadway.com">Contact</a></li>
+             <li><a href="mailto:listabot@philipbroadway.com">Contact</a></li>
            </ul>
          </div>
        </div>
