--- a/index.html
+++ b/index.html
@@ -104,7 +104,16 @@
              <li class="active"><a href="#home">Home</a></li>
              <li><a href="#features">Features</a></li>
               <li><a href="#store">Pricing</a></li>
-             <li><a href="mailto:listabot@philipbroadway.com">Contact</a></li>
+              <li role="presentation" class="dropdown">
+                  <a class="dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">
+                    Support <span class="caret"></span>
+                  </a>
+                  <ul class="dropdown-menu">
+                    <li><a href="assets/listabot-guide-iphone-1.02.pdf">iPhone User Guide</a></li>
+                    <li><a href="assets/listabot-guide-ipad-1.02.pdf">iPad User Guide</a></li>
+                    <li><a href="mailto:listabot@philipbroadway.com">Contact</a></li>
+                  </ul>
+                </li>
            </ul>
          </div>
        </div>
@@ -133,9 +142,11 @@
     <h3 id="features" class="text-center display-2"><a name="features">Features</a></h3>
     <div class="container">
       <div class="row text-center">
-        <img class="img" height="574" src="1242x2208-tasks.png" alt="Create multiple active projects with different hourly rates">
-        <img class="img" height="574" src="1242x2208-timeline.png" alt="You choose the billable hours to export in reports. Currently support CVS &amp; HTML">
-        <img class="img" height="574" src="1242x2208-analytics.png" alt="Compare time utilization per task in each project or in all your projects and estimate with confidence.">
+        <img class="img" height="574" src="assets/site/1242x2208-tasks.png" alt="Create multiple active projects with different hourly rates">
+        <img class="img" height="574" src="assets/site/1242x2208-timeline.png" alt="You choose the billable hours to export in reports. Currently support CVS &amp; HTML">
+        <img class="img" height="574" src="assets/site/1242x2208-analytics.png" alt="Compare time utilization per task in each project or in all your projects and estimate with confidence.">
+        <img class="img" height="574" src="assets/site/2048x2732-project-browser-ipad.png" alt="Designed to look beautiful on both iPhone & iPad">
+        <img class="img" height="574" src="assets/site/2048x2732-timeline-browser-ipad.jpg" alt="Designed to look beautiful on both iPhone & iPad">
       </div>
     </div>
     </div>
