--- a/assets/eula.html
+++ b/assets/eula.html
@@ -21,7 +21,7 @@
   <div class="container">
     <h1>Listabot End-User License Agreement</h1>
 
-    <em>Last updated: 3/30/2017</em>
+    <em>Last updated: 4/14/2017</em>
 
     <p>Please read this End-User License Agreement carefully before using Listabot.</p>
 
@@ -83,7 +83,7 @@
     <p>If you have any questions about this Agreement, please contact me.</p>
 
     Philip Broadaway <br />
-    Email: yo@listabot.com</br />
+    Email: <a href="mailto:listabot@philipbroadway.com">listabot@philipbroadway.com</a></br />
   </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
