minor ui change

--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
     </div>
     <div class="container">
       <div class="row text-center">
-        <img class="hero-phone img-responsive" src="verticle-phone.png" alt="Screenshots of the Project Browser &amp; Analytics browser in Listabot">
+        <img class="hero-phone img-responsive" src="verticle-phone.png">
       </div>
     </div>
     <div class="container">
