--- a/index.html
+++ b/index.html
@@ -145,8 +145,8 @@
         <img class="img" height="574" src="assets/site/1242x2208-tasks.png" alt="Create multiple active projects with different hourly rates">
         <img class="img" height="574" src="assets/site/1242x2208-analytics.png" alt="Compare time utilization per task in each project or in all your projects and estimate with confidence.">
         <img class="img" height="574" src="assets/site/1242x2208-timeline.png" alt="You choose the billable hours to export in reports. Currently support CVS &amp; HTML">
-        <img class="img" height="574" src="assets/site/2048x2732-project-browser-ipad.png" alt="Designed to look beautiful on both iPhone & iPad">
-        <img class="img" height="574" src="assets/site/2048x2732-timeline-browser-ipad.png" alt="Designed to look beautiful on both iPhone & iPad">
+        <!-- <img class="img" height="574" src="assets/site/2048x2732-project-browser-ipad.png" alt="Designed to look beautiful on both iPhone & iPad">
+        <img class="img" height="574" src="assets/site/2048x2732-timeline-browser-ipad.png" alt="Designed to look beautiful on both iPhone & iPad"> -->
       </div>
     </div>
     </div>
