--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
            <ul class="nav navbar-nav"></ul>
            <ul class="nav navbar-nav pull-right">
              <li class="active"><a href="#home">Get The App</a></li>
-             <li><a href="#features">Features</a></li>
+             <!-- <li><a href="#features">Features</a></li> -->
               <li role="presentation" class="dropdown">
                   <a class="dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">
                     Support <span class="caret"></span>
@@ -80,7 +80,7 @@
         </div>
       </div>
     </div>
-    <div id="features" class="container-fluid secondary-bg">
+    <!-- <div id="features" class="container-fluid secondary-bg">
     <div class="container">
       <div class="row">
         <h3 name="features">Features</h3>
@@ -99,7 +99,7 @@
               </div>
           </div>
       </div>
-      
+
       <div class="row">
         <div class="featured-item multi-tasking">
           <div class="row col-md-6">
@@ -135,7 +135,7 @@
       </div>
     </div>
     </div>
-    </div>
+    </div> -->
     <!-- <div id="pricing" class="container-fluid third-bg">
       <div class="container">
         <div class="row">
@@ -153,7 +153,7 @@
     <footer class="footer">
       <div class="container">
         <div class="pull-left"><a href="http://philipbroadway.com">
-          <p class="text-muted">&copy; Philip Broadway 2017 &nbsp;&nbsp;All Rights reserved</p></a>
+          <p >&copy; Philip Broadway 2017 &nbsp;&nbsp;All Rights reserved</p></a>
         </div>
       </div>
     </footer>
